<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.betianaminio.workingwithsqlite.views.activities.ExerciseActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/exercise_text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <EditText
                android:id="@+id/exercise_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exercise_name"
                android:maxLength="30" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/exercise_text_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="400">

            <EditText
                android:id="@+id/exercise_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exercise_description"
                android:maxLength="400" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/exercise_text_view_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/exercise_level"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/exercise_radio_group_levels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/exercise_radio_button_lower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onSelectLevelClicked"
                android:text="@string/exercise_level_lower" />

            <RadioButton
                android:id="@+id/exercise_radio_button_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_level_medium"
                android:onClick="onSelectLevelClicked"/>

            <RadioButton
                android:id="@+id/exercise_radio_button_higher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_level_higher"
                android:onClick="onSelectLevelClicked"/>


        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exercise_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_button_cancel"
                android:onClick="onCancelButtonClicked"
                style="@style/ButtonCancelStyle"/>

            <Button
                android:id="@+id/exercise_button_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_button_done"
                android:onClick="onDoneButtonClicked"
                style="@style/ButtonAcceptStyle"/>

        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
